# python-project-52

./: .env  Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: forms.py  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_created_at_alter_label_name.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_created_at_alter_status_name.py  0002_alter_status_name.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_author_alter_task_executor_alter_task_status.py  0003_remove_task_created_at.py  0004_task_created_at.py  0005_alter_task_executor.py  0006_task_label.py  0007_remove_task_label_tasksrelationlabels_task_labels.py  0008_remove_tasksrelationlabels_created_at_and_more.py
task_manager/templates/: base.html  delete.html  form.html  index.html  login.html  registration.html  users.html
task_manager/templates/labels/: delete.html  index.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: delete.html  detail.html  index.html
task_manager/tests/: tests_labels.py  tests_statuses.py  tests_tasks.py  tests_users.py
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+18 files in other folders)
