[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Eugene Anisimov <zero0061@mail.ru>"]
readme = "README.md"
packages = [
    { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
django = "^5.1.1"
gunicorn = "^23.0.0"
dj-database-url = "^2.2.0"
django-bootstrap5 = "^24.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
